@@ -1,6 +1,7 @@
 Revision history for Test-Warnings
 
 {{$NEXT}}
+          - add Test2 compatibility in the test triggered by done_testing();
 
 0.032     2023-09-30 23:36:50Z
           - new config variable, $ENV{PERL_TEST_WARNINGS_ONLY_REPORT_WARNINGS},
